# dify-plugins

./: .difyignore  .gitignore  PRIVACY.md  README.md  main.py  manifest.yaml  pyproject.toml  requirements.txt
.github/workflows/: plugin-publish.yml
models/llm/: _position.yaml  gemma4-26b.yaml  llm.py  qwen3.5-122b.yaml  qwen3.5-9b.yaml  qwen3.6-35b.yaml
provider/: skypool.py  skypool.yaml
readme/: README_zh_Hans.md
skypool/skypool/: skypool-0.5.1.difypkg
